# ocaml_webapp_test

./: .editorconfig  .gitignore  .ocamlformat  README.md  docker-compose.yml  dune-project  ocaml_webapp.install  ocaml_webapp.opam  test.js
bun/: README.md  index.ts
elixir/: README.md  mix.exs
elixir/config/: config.exs
elixir/lib/web/: application.ex  router.ex
express/: README.md  forked.js  index.js  package.json  pnpm-lock.yaml  seed.mjs
fsharp/: Program.fs  README.md  fsharp.fsproj
fsharp/Properties/: launchSettings.json
golang/: README.md  go.mod  go.sum  main.go
hello-rust/src/: main.rs
lib/: dune
ocaml/: README.md  dune-project  ocaml_webapp.opam
ocaml/lib/pg/: dune  pg.ml  pg.mli
rust/: Cargo.toml  README.md
rust/src/: main.rs
test/: dune
