(lang dune 3.6)

(name ocaml_webapp)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name ocaml_webapp)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune base httpun httpun-eio eio_main logs fmt routes yojson postgresql)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
